# consultas_medicas_backend

./: .env.example  .gitignore  CONSULTAS-MEDICAS.postman_collection.json  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
clinic/: admin.py  apps.py  filters.py  pagination.py  permissions.py  urls.py
clinic/migrations/: 0001_initial.py
clinic/models/: __init__.py  cita.py  consulta.py  especialidad.py  horario.py  medico.py  paciente.py  receta.py
clinic/serializers/: __init__.py  auth.py  cita.py  consulta.py  especialidad.py  horario.py  medico.py  paciente.py  user.py
clinic/tests/: helpers.py  test_auth.py  test_citas.py  test_consultas.py  test_especialidades.py  test_medicos.py  test_pacientes.py
clinic/views/: __init__.py  auth.py  cita.py  consulta.py  especialidad.py  health.py  horario.py  medico.py  paciente.py  user.py
config/: settings.py  urls.py
